<resources>
    <string name="app_name">공구팟구</string>
    <string name="logo_description">09P9 Logo</string>

    <string name="hint_email">이메일</string>
    <string name="hint_name">이름</string>
    <string name="hint_password">비밀번호</string>
    <string name="hint_password_check">비밀번호 확인</string>

    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="sign_up">회원가입</string>

    <string name="goto_sign_in"><u>이미 계정이 있으신가요?</u></string>
    <string name="goto_sign_out"><u>아직 계정이 없으신가요?</u></string>

    <string name="terms_agreement">이용 약관에 동의합니다.</string>
    <string name="terms_and_conditions">이용 약관</string>
    <string name="terms_detail">Terms Detail</string>

    <string name="message_error_email_format">올바르지 않은 이메일 형식입니다.</string>
    <string name="message_error_email_already_in_use">이미 사용중인 이메일입니다.</string>
    <string name="message_error_password">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="message_error_password_check">비밀번호가 일치하지 않습니다.</string>
    <string name="message_error_account">계정 정보가 올바르지 않습니다 .</string>
    <string name="message_verification_email_sent">인증 메일이 발송되었습니다.</string>

    <string name="warning">Warning</string>

    <string name="home">홈</string>
    <string name="recommendation">추천</string>
    <string name="bookmark">북마크</string>
    <string name="profile">프로필</string>
    <string name="verify">인증하기</string>
</resources>