<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/recommendationFragment"
        android:title="@string/recommendation"
        android:icon="@drawable/ic_recommendation"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/bookmarkFragment"
        android:title="@string/bookmark"
        android:icon="@drawable/ic_bookmark"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom"/>
</menu>