<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.user.SignUpFragment">

    <data>

        <variable
            name="signUpFragment"
            type="com.yang.a09p9.presentation.user.SignUpFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="190dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/ic_09p9_logo_shadowed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/style_edittext_rounded"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <ImageView
                android:id="@+id/imageEmailWarning"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/warning"
                android:src="@drawable/ic_info"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/editEmail"
                app:layout_constraintHorizontal_bias="0.00"
                app:layout_constraintStart_toStartOf="@+id/editEmail"
                app:layout_constraintTop_toBottomOf="@+id/editEmail"
                app:tint="@color/red_09p9" />

            <TextView
                android:id="@+id/textEmailWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/message_error_email_format"
                android:textColor="@color/red_09p9"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageEmailWarning"
                app:layout_constraintStart_toEndOf="@+id/imageEmailWarning"
                app:layout_constraintTop_toTopOf="@+id/imageEmailWarning"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:background="@drawable/style_edittext_rounded"
                android:hint="@string/hint_name"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/editEmail"
                app:layout_constraintStart_toStartOf="@+id/editEmail"
                app:layout_constraintTop_toBottomOf="@+id/imageEmailWarning" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:background="@drawable/style_edittext_rounded"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/editName"
                app:layout_constraintStart_toStartOf="@+id/editName"
                app:layout_constraintTop_toBottomOf="@+id/editName" />

            <ImageView
                android:id="@+id/imagePasswordWarning"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/warning"
                android:src="@drawable/ic_info"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/editPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editPassword"
                app:layout_constraintTop_toBottomOf="@+id/editPassword"
                app:tint="@color/red_09p9" />

            <TextView
                android:id="@+id/textPasswordWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/message_error_password"
                android:textColor="@color/red_09p9"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imagePasswordWarning"
                app:layout_constraintStart_toEndOf="@+id/imagePasswordWarning"
                app:layout_constraintTop_toTopOf="@+id/imagePasswordWarning" />

            <EditText
                android:id="@+id/editPasswordCheck"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="password"
                android:background="@drawable/style_edittext_rounded"
                android:hint="@string/hint_password_check"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/editPassword"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editPassword"
                app:layout_constraintTop_toBottomOf="@+id/imagePasswordWarning" />

            <ImageView
                android:id="@+id/imagePasswordCheckWarning"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/warning"
                android:src="@drawable/ic_info"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/editPasswordCheck"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editPasswordCheck"
                app:layout_constraintTop_toBottomOf="@+id/editPasswordCheck"
                app:tint="@color/red_09p9" />

            <TextView
                android:id="@+id/textPasswordCheckWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/message_error_password_check"
                android:textColor="@color/red_09p9"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imagePasswordCheckWarning"
                app:layout_constraintStart_toEndOf="@+id/imagePasswordCheckWarning"
                app:layout_constraintTop_toTopOf="@+id/imagePasswordCheckWarning" />


            <CheckBox
                android:id="@+id/checkTermsAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_agreement"
                app:buttonTint="@color/blue_09p9"
                app:layout_constraintEnd_toEndOf="@+id/editPasswordCheck"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editPasswordCheck"
                app:layout_constraintTop_toBottomOf="@+id/imagePasswordCheckWarning" />

            <ImageButton
                android:id="@+id/buttonTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:contentDescription="@string/terms_detail"
                android:onClick="@{() -> signUpFragment.toTerms()}"
                android:padding="5dp"
                android:src="@drawable/ic_right"
                app:layout_constraintBottom_toBottomOf="@+id/checkTermsAgreement"
                app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
                app:layout_constraintTop_toTopOf="@+id/checkTermsAgreement" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_rounded"
                android:onClick="@{() -> signUpFragment.onRegister()}"
                android:paddingVertical="16dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editPasswordCheck"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editPasswordCheck"
                app:layout_constraintTop_toBottomOf="@+id/checkTermsAgreement" />

            <TextView
                android:id="@+id/textGoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> signUpFragment.toLogin()}"
                android:text="@string/goto_sign_in"
                android:textColor="@color/blue_09p9"
                app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/buttonRegister"
                app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue_09p9"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>