<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signInFragment"
            type="com.yang.a09p9.presentation.user.sign_in.SignInFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="190dp"
                android:layout_height="150dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/ic_09p9_logo_shadowed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/style_edittext_rounded"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_logo" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="password"
                android:background="@drawable/style_edittext_rounded"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/editEmail"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editEmail"
                app:layout_constraintTop_toBottomOf="@+id/editEmail" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/style_button_rounded"
                android:onClick="@{() -> signInFragment.onLogin()}"
                android:paddingVertical="16dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/editPassword"
                app:layout_constraintStart_toStartOf="@+id/editPassword"
                app:layout_constraintTop_toBottomOf="@+id/editPassword" />

            <ImageView
                android:id="@+id/imageAccountWarning"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/warning"
                android:src="@drawable/ic_info"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/textAccountWarning"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
                app:tint="@color/red_09p9" />

            <TextView
                android:id="@+id/textAccountWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/message_error_account"
                android:textColor="@color/red_09p9"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/imageAccountWarning"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintStart_toEndOf="@+id/imageAccountWarning"
                app:layout_constraintTop_toTopOf="@+id/imageAccountWarning"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textGoRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> signInFragment.toRegister()}"
                android:text="@string/goto_sign_out"
                android:textColor="@color/blue_09p9"
                app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="@+id/buttonLogin"
                app:layout_constraintTop_toBottomOf="@+id/imageAccountWarning" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue_09p9"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>